# src/components/studentEvent/studentEvent.types.ts
@@ -4,3 +4,8 @@ export interface IStudentEvent {
     studentId: string
     eventId: string
 }
+
+export interface ICheckStudentEvent {
+    studentId: string
+    eventId: string
+}
